# DDNS-Remake

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  flake.nix  result  rust-toolchain.toml
.claude/: settings.json
.claude/rule/: TODO.md
.github/workflows/: build.yml  docker.yml
DDNS-API/: Delete-Device.bru  ExChange_deviceToken.bru  Get_Device_All_Domain.bru  Get_Profile.bru  Is_Login.bru  Login.bru  Patch_Domain.bru  Register-Device.bru  bruno.json  collection.bru
DDNS-API/environments/: v1.bru
DDNS-Remake-API/: Get_DNS_Records.yml  Update_DNS_Records.yml  opencollection.yml
DDNS-Remake-API/environments/: v1.yml
crates/DDNS-Client/: Cargo.toml
crates/DDNS-Client/src/: client.rs  config.rs  daemon.rs  lib.rs  main.rs
crates/DDNS-Core/: Cargo.toml
crates/DDNS-Core/src/: lib.rs
crates/DDNS-Core/src/in/: mod.rs
crates/DDNS-Server/: Cargo.toml
crates/DDNS-Server/migrations/2026-03-13-183248-0000_create_init_db/: down.sql  up.sql
crates/DDNS-Server/migrations/2026-03-18-062437-0000_add-devicename/: down.sql  up.sql
crates/DDNS-Server/src/: apis.rs  cli.rs  command.rs  config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs  repl.rs  schema.rs  server.rs  translate.rs
crates/DDNS-Server/src/apis/: mod.rs  test.rs
crates/DDNS-Server/src/apis/auth/: mod.rs
crates/DDNS-Server/src/apis/v1/: mod.rs
crates/DDNS-Server/src/command/: mod.rs  server.rs  start.rs  utils.rs
crates/DDNS-Server/src/middlewares/: mod.rs  token_validator.rs  user.rs
crates/DDNS-Server/src/parser/: cli.rs  repl.rs
crates/DDNS-Server/src/tui/: mod.rs
deploy/: ddns-client.service  ddns-server.service  install.ps1  install.sh
src/: main.rs
src/core/ip/: mod.rs
src/providers/: cloudflare.rs  mod.rs
