[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.metadata.crane]
name = "ddns-remake-workspace"

[workspace.package]
authors = ["Derrick Lin <dlin12457@gmail.com>"]
version = "0.1.0"
edition = "2024"
# repository = "https://github.com/user/project"
# license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
    "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "tracing",
    "env-filter",
] }
salvo = { version = "0.89.2", default-features = false}
ddns-core = { path = "crates/DDNS-Core" }