[package]
name = "ddns-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
ddns-core.workspace = true
dirs.workspace = true
public-ip-address = "0.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
