[package]
name = "ddns-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "DDNS Server CLI"

[dependencies]
anyhow.workspace = true
argon2 = "0.5.3"
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
cloudflare = "0.14.0"
ddns-core.workspace = true
diesel = { version = "2.3.7", features = [
    "sqlite",
    "serde_json",
    "chrono",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
    "uuid",
] }
diesel_migrations = "2.3.1"
dotenvy.workspace = true
nanoid = "0.4.0"
rustyline = "17.0.2"
salvo = { workspace = true, features = [
    "anyhow",
    "affix-state",
    "jwt-auth",
    "logging",
    "oapi",
], default-features = true }
serde.workspace = true
shlex = "1.3.0"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
machine-uid.workspace = true
[dev-dependencies]
serde_json = "1.0.149"
